tests/fixtures/invalid/pow_int_none_bytes.py
# Cannot call pow() with Int, None, Bytes
x = pow(1, None, b"hello")
